# giming

./: .gitattributes  .gitignore  Cargo.toml  ac-rs.code-workspace  cmd.sh  env.sh  giming.code-workspace  init.sh  prepare-at.sh  prepare-kn.sh  readme.md  render-rust.yaml  tall cargo-compete  tasks.json
.github/workflows/: build.yml
abc121/: tasks.json
atcoder-tools/abc121/A/: main.rs  metadata.json
atcoder-tools/abc121/B/: metadata.json
atcoder-tools/abc121/C/: metadata.json
atcoder-tools/abc121/D/: main.rs  metadata.json
atcoder-tools/abc334/A/: main.rs  metadata.json
atcoder-tools/abc334/B/: metadata.json
atcoder-tools/abc334/C/: metadata.json
atcoder-tools/template/: template.rs
compete/: compete.toml
compete/!CONTEST/: Cargo.toml
compete/abc334/: abc334.code-workspace
crates/domain/: Cargo.toml
crates/domain/src/: entity.rs  (+1 more)
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  config_impl.rs  detail_error.rs  directory_generator_impl.rs  error.rs  external.rs  lib.rs  online_judge_impl.rs  repository_impl.rs  shell.rs
crates/infrastructure/src/online_judge_impl/: atcoder.rs
crates/infrastructure/src/repository_impl/: contest_repository_impl.rs  workspace_repository_impl.rs
crates/infrastructure/src/shell/: commands.rs  init.rs  login.rs  shell.rs  whoami.rs
crates/infrastructure/tests/online_judge_impl/: atcoder_get_problems.txt  atcoder_get_problems_detail_abc375_logged_in.txt  atcoder_get_problems_summary_abc375_logged_in.txt
crates/infrastructure/tests/responses/: atcoder_get_home.sanitized.html  atcoder_get_home_logged_in.sanitized.html  atcoder_get_tasks_print.sanitized.html  atcoder_get_tasks_print_logged_in.sanitized.html  atcoder_get_tasks_print_not_started.sanitized.html  atcoder_get_tasks_print_not_started_logged_in.sanitized.html
crates/interfaces/: Cargo.toml
crates/usecases/: Cargo.toml
docs/: dev.md
solutions/: compete.toml
solutions/!CONTEST/: Cargo.toml  {{ contest.id }}.code-workspace  {{ contest_id }}.code-workspace
solutions/!CONTEST/src/: ! test.txt
solutions/abc334/: Cargo.toml  abc334.code-workspace
solutions/abc375/: Cargo.toml  abc375.code-workspace
src/: console.rs  domain.rs  infrastructure.rs  init.rs  lib.rs  main.rs  terminal.rs  usecases.rs
src/domain/: error.rs
src/infrastructure/: external.rs  repository_impl.rs  shell.rs
src/interfaces/: controller.rs  shell.rs
src/usecases/: repository.rs  repository_test.rs  service.rs  service_impl.rs
test-cp/: Cargo.toml
test-cp/src/: main.rs
(+34 files in other folders)
