[package]
name = "giming"
version = "0.1.0"
authors = ["kisepichu <kisepichu@gmail.com>"]
edition = "2021"
default-run = "gm"

[dependencies]
clap = "4.5.4"
infrastructure = { path = "crates/infrastructure" }

[[bin]]
name = "gm"
path = "src/bin/main.rs"


[workspace]
members = [
  "crates/domain", "crates/infrastructure", "crates/interfaces", "crates/usecases",
]
resolver = "2"
