[package]
name = "giming"
version = "0.1.0"
authors = ["kisepichu <kisepichu@gmail.com>"]
edition = "2021"
default-run = "gm"

[dependencies]
clap = "4.5.4"
infrastructure = { path = "crates/infrastructure" }
regex = "1.10.4"
rstest = "0.19.0"

[[bin]]
name = "gm"
path = "src/bin/main.rs"

[[bin]]
name = "sanitize-testing-html"
path = "src/bin/sanitize_testing_html.rs"


[workspace]
members = [
  "crates/domain", "crates/infrastructure", "crates/interfaces", "crates/usecases",
]
resolver = "2"
