[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
usecases = { path = "../usecases" }
interfaces = { path = "../interfaces" }
clap = { version = "4.5.4", features = ["derive"] }
rpassword = "7.3.1"
tera = "1.19.1"
scraper = "0.19.0"
reqwest = { version = "0.12.4", features = ["cookies", "blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.60"
anyhow = "1.0.83"
mockall = "0.12.1"
rstest = "0.19.0"
confy = "0.6.1"
regex = "1.11.0"
shellexpand = "3.1.0"
rustyline = "14.0.0"

[dev-dependencies]
http = "1.1.0"
