[package]
name = "{{ contest_id }}"
version = "0.1.0"
edition = "2021"

{% for wp in work_problems %}
[[bin]]
name = "{{ wp.problem.id }}"
path = "src/bin/{{ wp.problem.code | lower }}.rs"
{% endfor %}

[dependencies]
once_cell = "1.20.2"
proconio = { version = "0.5.0", features = ["derive"] }
rstest = "0.23.0"
